Some basic things, projekt.html and some slides

--- a/css/theme/beige.css
+++ b/css/theme/beige.css
@@ -146,3 +146,8 @@ body {
  *********************************************/
 .reveal .slide-number {
   color: #8b743d; }
+  
+  div{
+    /*background-color:orange;*/
+  }
+   
