--- a/css/theme/beige.css
+++ b/css/theme/beige.css
@@ -84,12 +84,16 @@ body {
   margin: 15px 0px;
   background: rgba(255, 255, 255, 0.12);
   border: 4px solid #333333;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+  /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);*/
   -webkit-transition: all .2s linear;
   -moz-transition: all .2s linear;
   -ms-transition: all .2s linear;
   -o-transition: all .2s linear;
-  transition: all .2s linear; }
+  transition: all .2s linear; 
+  
+  box-shadow: 10px 10px 5px #888888;
+  
+}
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
@@ -150,4 +154,29 @@ body {
   div{
     /*background-color:orange;*/
   }
+   blockquote{
+     font-size:0.2em;
+   }
+   img{
+      box-shadow: 10px 10px 5px #888888;
+   }
    
+   .reveal section footer{
+     background-color:#EAF8F8;
+     border-top-color:red;
+     border-top-style:solid;
+     border-top-width:2px;
+     height:10%;
+     text-decoration:italic;
+   }
+   .reveal section header{
+     background-color:#EAF8F8;
+     border-bottom-color:red;
+     border-bottom-style:solid;
+     border-bottom-width:2px;
+     height:10%
+     padding-bottom:5%;
+   }
+   .reveal section h2{
+     margin-top:10px;
+   }
